opam-version: "1.2"

maintainer: "Christophe.Troestler@umons.ac.be"
homepage: "https://github.com/kennknowles/ocaml-freetds"
dev-repo: "https://github.com/kennknowles/ocaml-freetds.git"
bug-reports: "https://github.com/kennknowles/ocaml-freetds/issues"
license: "LGPL-2.1"

tags: [
  "clib:ct"
  "clib:sybdb"
]

build: ["jbuilder" "build" "-p" name "-j" jobs]
build-test: ["jbuilder" "runtest" "-p" name "-j" jobs]

depends: [
  "jbuilder" {build & >= "1.0+beta19.1"}
  "ounit" {test & >= "2.0.0"}
]

depexts: [
  [["centos"] ["freetds-devel"]]
  [["debian"] ["freetds-dev"]]
  [["fedora"] ["freetds-devel"]]
  [["ubuntu"] ["freetds-dev"]]
  [["osx" "homebrew"] ["freetds"]]
]
