opam-version: "2.0"
authors: [ "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
           "Kenn Knowles <kenn.knowles@gmail.com>" ]
maintainer: "Christophe.Troestler@umons.ac.be"
homepage: "https://github.com/kennknowles/ocaml-freetds"
dev-repo: "git+https://github.com/kennknowles/ocaml-freetds.git"
bug-reports: "https://github.com/kennknowles/ocaml-freetds/issues"
doc: "https://kennknowles.github.io/ocaml-freetds/doc"
license: "LGPL-2.1"

tags: [
  "clib:ct"
  "clib:sybdb"
]

build: [
  ["dune" "subst"]{pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" {build}
  "cppo" {build}
  "ounit" {with-test & >= "2.0.0"}
  "ocaml" {>= "4.02.3"}
]
depexts: [
  [["alpine"] ["freetds-dev"]]
  [["centos"] ["epel-release" "freetds-devel"]]
  [["debian"] ["freetds-dev"]]
  [["ubuntu"] ["freetds-dev"]]
  [["alpine"] ["freetds-dev"]]
  [["fedora"] ["freetds-devel"]]
  [["rhel"]   ["freetds-devel"]]
  [["mageia"] ["libfreetds-devel"]]
  [["opensuse"] ["freetds-devel"]]
  [["freebsd"] ["freetds-devel"]]
  [["osx" "homebrew"] ["freetds"]]
# [["cygwinports" "x86_64"] ["mingw64-x86_64-freetds"]]
]
synopsis: "Binding to the FreeTDS library"
description: """
FreeTDS is a set of libraries for Unix and Linux that allows your
programs to natively talk to Microsoft SQL Server and Sybase
databases."""
